 + New call: HealHog(gearUid, healthBoost[, showMessage[, tint]]): Heal hedgehog with graphical effects and message
 + New call: SetTeamLabel(teamname[, label]): Set an arbitrary label for a team, will be displayed next to the team bar
 + New call: SetSoundMask(soundId, isMasked): Allows to disable playing a sound effect from engine
 + New param: PlaySound accepts 3rd parameter for voices: instaVoice: If true, sound plays instantly instead of being queued
 + New callback: onEndTurn(): Called at the end of a turn (when gears have settled)
 + New hedgehog effect: heArtillery: Per-hedgehog artillery mode (can't walk). Values: 1 = permanently active. 2 = temporarily active (sniper rifle). 0 = not active
 * AddAmmo now automatically unselects weapon if it would remove current ammo from current hedgehog
 * Fix call: SetWeapon(amNothing) now unselects weapon
 * Fix call: SetWind did not update flake flying direction
 * Fix global: TotalRounds was stuck at -1 for several turns

====================== 0.9.23 ======================
HIGHLIGHTS:
 + Battalion style
 + Fort mode is now a map type instead of a scheme setting
 + Fort mode now works with more than 2 teams
 + New weapon: rubber duck
 + New theme, map, 3 forts, 3 missions, some hats and graves
 + WxW style allows you to select one of many wall sets
 + Complete HedgeEditor overhaul
 + Greatly improved script parameter support for many styles
 + Improves stats screen of most styles and missions
 + Various improvements for almost all styles
 + AI hedgehogs can now use Bee, Vamprism, and Time Box
 + Campaign page now shows your progress
 + Improved turn timer
 + Improved randomization options in team and multiplayer pages
 + Improved theme customization support
 + Various Lua API additions
 * Fix cursor often jumping around after clicking
 * A huge amount of bugfixes for both campaigns, the missions and styles
 * Video recording functionality is restored

Content: